google apiを利用したメール送受信テスト

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 受信設定ファイル_ver.1.0.0.xlsx
+client_secret_80603762808-o1751ha984pfuhpgpqb39dfbqdt83fac.apps.googleusercontent.com.json
+token.json
+image_3.jpg
+download.png
