google apiを使用した監視まで完了

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ client_secret_80603762808-o1751ha984pfuhpgpqb39dfbqdt83fac.apps.googleuserconten
 token.json
 image_3.jpg
 download.png
+turing-energy-462700-m1-ac7f44dbd376.json
